Bug 278369 - copy/paste does not work
Summary: copy/paste does not work
Status: RESOLVED FIXED
Alias: None
Product: kcharselect
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Laidig
URL:
Keywords:
: 242753 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-07-24 01:09 UTC by Jess Boddy
Modified: 2011-08-26 10:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.1
Sentry Crash Report:


Attachments
Proposed patch (1.11 KB, patch)
2011-07-24 18:12 UTC, Christoph Feck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jess Boddy 2011-07-24 01:09:42 UTC
Version:           unspecified (using KDE 4.5.5) 
OS:                Linux

kcharselect. Copy does not copy to the klipper.

Reproducible: Always

Steps to Reproduce:
start kcharselect
select a character and copy it (ctrl-c etc)
paste to another app (or check klipper)
nothing is pasted

Actual Results:  
the character is not copied to klipper

Expected Results:  
the character should have been copied

used to work in older versions
Comment 1 Samuel Johnson 2011-07-24 06:17:56 UTC
It is NOT a bug. You have to double click the characters so that it appears in the text box below, and then copy.
Comment 2 Samuel Johnson 2011-07-24 06:18:43 UTC
It is NOT a bug. You have to double click the characters so that it appears in the text box below, and then copy.
Comment 3 Christoph Feck 2011-07-24 18:12:03 UTC
Created attachment 62149 [details]
Proposed patch

This should fix it. If the Line Edit is empty, it copies the currently selected character.
Comment 4 Samuel Johnson 2011-07-24 19:27:49 UTC
Patch works great. Tested in Arch Linux.
Comment 5 Christoph Feck 2011-08-03 23:00:26 UTC
*** Bug 242753 has been marked as a duplicate of this bug. ***
Comment 6 Daniel Laidig 2011-08-25 20:55:08 UTC
Great patch, please commit to master and 4.7.
Comment 7 Christoph Feck 2011-08-26 10:08:26 UTC
Git commit 7cab93ef7dc25504909a948b7f1a7ad9192d6861 by Christoph Feck.
Committed on 26/08/2011 at 12:07.
Pushed by cfeck into branch '4.7'.

Copy current character if line edit is empty

BUG: 278369
FIXED-IN: 4.7.1

M  +10   -3    kcharselectdia.cc

http://commits.kde.org/kcharselect/7cab93ef7dc25504909a948b7f1a7ad9192d6861
Comment 8 Christoph Feck 2011-08-26 10:09:18 UTC
Git commit ea8559995bd921c74e4f077b81208c0decd1151b by Christoph Feck.
Committed on 26/08/2011 at 12:07.
Pushed by cfeck into branch 'master'.

Copy current character if line edit is empty

BUG: 278369
FIXED-IN: 4.7.1
(cherry picked from commit 7cab93ef7dc25504909a948b7f1a7ad9192d6861)

M  +10   -3    kcharselectdia.cc

http://commits.kde.org/kcharselect/ea8559995bd921c74e4f077b81208c0decd1151b