Copy current character if line edit is empty

BUG: 278369
FIXED-IN: 4.7.1
(cherry picked from commit 7cab93ef7dc25504909a948b7f1a7ad9192d6861)